--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,41 @@
-body {
+/* tailwind css stylesheet */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/* // google font poppins link */
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap");
+
+/* // utilities */
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  font-family: "Poppins", sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* // banner background image */
+.banner {
+  background-image: url("https://accessclinics.org/wp-content/uploads/2015/01/homeparallax.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  min-height: 600px;
+}
+
+/* // about image */
+.about-image {
+  transition: transform 0.5s;
+}
+.about-image:hover {
+  transform: scale(1.3);
+}
+
+/* // service image */
+.service-image {
+  width: 400px;
+  height: 200px;
+  transition: transform 0.5s;
+}
+
+.service-image:hover {
+  transform: scale(1.2);
 }
